--- a/po/es.po
+++ b/po/es.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-14 10:57-0500\n"
+"POT-Creation-Date: 2026-01-14 11:52-0500\n"
 "PO-Revision-Date: 2025-08-14 23:57+0000\n"
 "Last-Translator: Anonymous <noreply@weblate.org>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/sysd-manager/"
@@ -2099,11 +2099,98 @@ msgctxt "flatpak"
 msgid "_Close"
 msgstr ""
 
+#: src/widget/unit_file_panel/imp.rs:263
+#, rust-format
+msgctxt "file"
+msgid "File {} created successfully!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:265
+#, rust-format
+msgctxt "file"
+msgid "File {} saved successfully!"
+msgstr ""
+
 #. Suggest to reload all unit configuation
 #: src/widget/unit_file_panel/imp.rs:271 src/widget/unit_file_panel/imp.rs:1077
 #, fuzzy
 msgid "Daemon Reload"
 msgstr "Cargado"
+
+#: src/widget/unit_file_panel/imp.rs:288 src/widget/unit_file_panel/imp.rs:304
+#: src/widget/unit_file_panel/imp.rs:1095
+msgctxt "file"
+msgid "Not able to save file, permission not granted!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:317
+msgctxt "file"
+msgid "Not able to save file, Flatpak permission not granted!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:325
+msgctxt "file"
+msgid "Not able to save file, an error happened!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:572
+#, fuzzy
+msgctxt "file"
+msgid "Unit File"
+msgstr "Archivo de unidad"
+
+#: src/widget/unit_file_panel/imp.rs:574
+msgctxt "file"
+msgid "Drop In"
+msgstr ""
+
+#. Create Drop in file name
+#: src/widget/unit_file_panel/imp.rs:962
+msgctxt "file"
+msgid "Editing"
+msgstr ""
+
+#. Create Drop in file name
+#: src/widget/unit_file_panel/imp.rs:970
+msgctxt "file"
+msgid "Note: you can change the file name"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:979
+msgctxt "file"
+msgid ""
+"Anything between here and the comment below will become the contents of the "
+"drop-in file"
+msgstr ""
+
+#. Create Drop in file footer
+#: src/widget/unit_file_panel/imp.rs:988
+msgctxt "file"
+msgid "Edits below this comment will be discarded"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:1067
+#, rust-format
+msgctxt "file"
+msgid "Unit {} reverted successfully!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:1116
+msgctxt "file"
+msgid "Not able to reverted unit, permission not granted!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:1126
+msgctxt "file"
+msgid "Not able to reverted unit, an error happened!"
+msgstr ""
+
+#. Show Line Number Menu Item
+#: src/widget/unit_file_panel/imp.rs:1220
+#, fuzzy
+msgctxt "file"
+msgid "Display Line Numbers"
+msgstr "Número de línea del archivo de la unidad de visualización"
 
 #: src/widget/unit_list/filter/imp.rs:346
 msgctxt "filter"
@@ -2143,6 +2230,53 @@ msgstr ""
 msgctxt "filter"
 msgid "Add filter on sub state"
 msgstr ""
+
+#: src/widget/unit_list/imp/construct.rs:230
+#, fuzzy
+msgctxt "list column"
+msgid "Unit"
+msgstr "Unidad"
+
+#: src/widget/unit_list/imp/construct.rs:245
+msgctxt "list column"
+msgid "Type"
+msgstr "Tipo"
+
+#: src/widget/unit_list/imp/construct.rs:260
+msgctxt "list column"
+msgid "Bus"
+msgstr "Autobús"
+
+#: src/widget/unit_list/imp/construct.rs:275
+msgctxt "list column"
+msgid "State"
+msgstr "Estado"
+
+#: src/widget/unit_list/imp/construct.rs:290
+msgctxt "list column"
+msgid "Preset"
+msgstr "Programar"
+
+#: src/widget/unit_list/imp/construct.rs:305
+msgctxt "list column"
+msgid "Load"
+msgstr "Carga"
+
+#: src/widget/unit_list/imp/construct.rs:320
+msgctxt "list column"
+msgid "Active"
+msgstr "Activa"
+
+#: src/widget/unit_list/imp/construct.rs:335
+msgctxt "list column"
+msgid "Sub"
+msgstr "Sub"
+
+#: src/widget/unit_list/imp/construct.rs:350
+#, fuzzy
+msgctxt "list column"
+msgid "Description"
+msgstr "Descripción"
 
 #: src/widget/unit_list/imp/pop_menu.rs:235
 #, fuzzy, rust-format
@@ -2442,11 +2576,6 @@ msgstr "Filtros"
 #~ msgid "Micro seconds since the epoch"
 #~ msgstr "Microsegundos desde la época"
 
-#, fuzzy
-#~ msgctxt "file"
-#~ msgid "Unit File"
-#~ msgstr "Archivo de unidad"
-
 #~ msgctxt "file"
 #~ msgid "File path:"
 #~ msgstr "Ruta del archivo:"
@@ -2458,31 +2587,3 @@ msgstr "Filtros"
 #~ msgctxt "preference"
 #~ msgid "Columns Display Parameters"
 #~ msgstr "Parámetros de visualización de columnas"
-
-#~ msgctxt "list column"
-#~ msgid "Type"
-#~ msgstr "Tipo"
-
-#~ msgctxt "list column"
-#~ msgid "Bus"
-#~ msgstr "Autobús"
-
-#~ msgctxt "list column"
-#~ msgid "State"
-#~ msgstr "Estado"
-
-#~ msgctxt "list column"
-#~ msgid "Preset"
-#~ msgstr "Programar"
-
-#~ msgctxt "list column"
-#~ msgid "Load"
-#~ msgstr "Carga"
-
-#~ msgctxt "list column"
-#~ msgid "Active"
-#~ msgstr "Activa"
-
-#~ msgctxt "list column"
-#~ msgid "Sub"
-#~ msgstr "Sub"
