--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-14 10:57-0500\n"
+"POT-Creation-Date: 2026-01-14 11:52-0500\n"
 "PO-Revision-Date: 2026-01-13 21:35+0000\n"
 "Last-Translator: Pier <491172+plrigaux@users.noreply.github.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/sysd-manager/"
@@ -2099,10 +2099,96 @@ msgctxt "flatpak"
 msgid "_Close"
 msgstr "_Fermer"
 
+#: src/widget/unit_file_panel/imp.rs:263
+#, fuzzy, rust-format
+msgctxt "file"
+msgid "File {} created successfully!"
+msgstr "Fichier {} enregistré avec succès!"
+
+#: src/widget/unit_file_panel/imp.rs:265
+#, rust-format
+msgctxt "file"
+msgid "File {} saved successfully!"
+msgstr "Fichier {} enregistré avec succès!"
+
 #. Suggest to reload all unit configuation
 #: src/widget/unit_file_panel/imp.rs:271 src/widget/unit_file_panel/imp.rs:1077
 msgid "Daemon Reload"
 msgstr "Recharger la configuration"
+
+#: src/widget/unit_file_panel/imp.rs:288 src/widget/unit_file_panel/imp.rs:304
+#: src/widget/unit_file_panel/imp.rs:1095
+msgctxt "file"
+msgid "Not able to save file, permission not granted!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:317
+msgctxt "file"
+msgid "Not able to save file, Flatpak permission not granted!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:325
+msgctxt "file"
+msgid "Not able to save file, an error happened!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:572
+msgctxt "file"
+msgid "Unit File"
+msgstr "Fichier de l'unité"
+
+#: src/widget/unit_file_panel/imp.rs:574
+msgctxt "file"
+msgid "Drop In"
+msgstr "Drop In"
+
+#. Create Drop in file name
+#: src/widget/unit_file_panel/imp.rs:962
+msgctxt "file"
+msgid "Editing"
+msgstr ""
+
+#. Create Drop in file name
+#: src/widget/unit_file_panel/imp.rs:970
+msgctxt "file"
+msgid "Note: you can change the file name"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:979
+msgctxt "file"
+msgid ""
+"Anything between here and the comment below will become the contents of the "
+"drop-in file"
+msgstr ""
+
+#. Create Drop in file footer
+#: src/widget/unit_file_panel/imp.rs:988
+msgctxt "file"
+msgid "Edits below this comment will be discarded"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:1067
+#, fuzzy, rust-format
+msgctxt "file"
+msgid "Unit {} reverted successfully!"
+msgstr "Fichier {} enregistré avec succès!"
+
+#: src/widget/unit_file_panel/imp.rs:1116
+msgctxt "file"
+msgid "Not able to reverted unit, permission not granted!"
+msgstr ""
+
+#: src/widget/unit_file_panel/imp.rs:1126
+msgctxt "file"
+msgid "Not able to reverted unit, an error happened!"
+msgstr ""
+
+#. Show Line Number Menu Item
+#: src/widget/unit_file_panel/imp.rs:1220
+#, fuzzy
+msgctxt "file"
+msgid "Display Line Numbers"
+msgstr "Afficher le numéro de ligne du fichier de l'unité"
 
 #: src/widget/unit_list/filter/imp.rs:346
 msgctxt "filter"
@@ -2141,6 +2227,51 @@ msgstr "Ajouter"
 msgctxt "filter"
 msgid "Add filter on sub state"
 msgstr "Ajouter un filtre au sous-état"
+
+#: src/widget/unit_list/imp/construct.rs:230
+msgctxt "list column"
+msgid "Unit"
+msgstr "Unité"
+
+#: src/widget/unit_list/imp/construct.rs:245
+msgctxt "list column"
+msgid "Type"
+msgstr "Type"
+
+#: src/widget/unit_list/imp/construct.rs:260
+msgctxt "list column"
+msgid "Bus"
+msgstr "Bus"
+
+#: src/widget/unit_list/imp/construct.rs:275
+msgctxt "list column"
+msgid "State"
+msgstr "État"
+
+#: src/widget/unit_list/imp/construct.rs:290
+msgctxt "list column"
+msgid "Preset"
+msgstr "Prérégler"
+
+#: src/widget/unit_list/imp/construct.rs:305
+msgctxt "list column"
+msgid "Load"
+msgstr "Chargement"
+
+#: src/widget/unit_list/imp/construct.rs:320
+msgctxt "list column"
+msgid "Active"
+msgstr "Activation"
+
+#: src/widget/unit_list/imp/construct.rs:335
+msgctxt "list column"
+msgid "Sub"
+msgstr "Sous Activation"
+
+#: src/widget/unit_list/imp/construct.rs:350
+msgctxt "list column"
+msgid "Description"
+msgstr "Description"
 
 #: src/widget/unit_list/imp/pop_menu.rs:235
 #, rust-format
@@ -2477,19 +2608,6 @@ msgstr "Filtrage"
 #~ msgstr ""
 #~ "<b>Option 3:</b> Dans votre terminal, exécutez la commande: <u>{}</u>"
 
-#, rust-format
-#~ msgctxt "file"
-#~ msgid "File {} saved successfully!"
-#~ msgstr "Fichier {} enregistré avec succès!"
-
-#~ msgctxt "file"
-#~ msgid "Unit File"
-#~ msgstr "Fichier de l'unité"
-
-#~ msgctxt "file"
-#~ msgid "Drop In"
-#~ msgstr "Drop In"
-
 #~ msgctxt "file"
 #~ msgid "File path:"
 #~ msgstr "Chemin du fichier :"
@@ -2533,42 +2651,6 @@ msgstr "Filtrage"
 #~ msgctxt "preference"
 #~ msgid "Columns Display Parameters"
 #~ msgstr "Paramètres d'affichage des colonnes"
-
-#~ msgctxt "list column"
-#~ msgid "Unit"
-#~ msgstr "Unité"
-
-#~ msgctxt "list column"
-#~ msgid "Type"
-#~ msgstr "Type"
-
-#~ msgctxt "list column"
-#~ msgid "Bus"
-#~ msgstr "Bus"
-
-#~ msgctxt "list column"
-#~ msgid "State"
-#~ msgstr "État"
-
-#~ msgctxt "list column"
-#~ msgid "Preset"
-#~ msgstr "Prérégler"
-
-#~ msgctxt "list column"
-#~ msgid "Load"
-#~ msgstr "Chargement"
-
-#~ msgctxt "list column"
-#~ msgid "Active"
-#~ msgstr "Activation"
-
-#~ msgctxt "list column"
-#~ msgid "Sub"
-#~ msgstr "Sous Activation"
-
-#~ msgctxt "list column"
-#~ msgid "Description"
-#~ msgstr "Description"
 
 #~ msgctxt "preference column"
 #~ msgid "Show"
